# DEMsim

./: CITATION.cff  CMakeLists.txt
post_processing/: animation.py  animation_functions.py  particle_visualization.py  particles_manual.py  pressure_density.py  pressure_density_animation.py  proctor_animation.py  visualization_functions_3d.py
post_processing/asphalt_shear_box/: asphalt_contact_plotter.py  contact_visualization.py  force_displacement.py  force_displacement_bonded.py  force_displacement_unbonded.py  maximum_force.py  parametric_study.py  parametric_sudy.py  pressure_dependency.py
post_processing/battery_electrode/: Compaction.py  Mechanical_test.py  Relaxation.py  battery_snapshots.py  contact_difference.py  contact_force_distribution.py  contact_tester.py  contact_tracker.py  mechanical_evaluation.py  porosity.py  stresses.py  structure_animation.py
post_processing/contact_testing/: contact_tester.py  stone_material_testing.py
post_processing/deformable_surfaces/: particle_animation.py  particle_position.py
post_processing/multiprocesser/: multiprocesser.py
post_processing/periodic_bc_test/: particle_animation.py  stress_state.py
post_processing/porous_electrode/: contact_data.py
post_processing/proctor_testing/: count_fractured_particles.py  count_particle_cracks.py  cracked_particles_visualization.py  gradation_change.py  plot_gradations.py  plot_gradations_new.py  plot_number_fractured_particles.py  proctor_animation.py
post_processing/stone_compaction/: calculate_fractured_contacts_history.py  force_displacement_plot.py  plot_fracture_history.py
post_processing/storakers_seminar/: animation_to_seminar.py
post_processing/viscoelastic/: surface_forces.py
post_processing/visualization_functions_3d/: animation.py  battery_contact_plotter.py  colors.py  particle_visualization.py  particles_manual.py  periodic_bc.py  plotting_functions.py  snapshot.py
pre_processing/: fuller_curve.py  generate_from_size_distribution.py  generate_particle_size_distribution.py  hertz_vs_linear.py  number_distribution.py  proctor_test_distribution.py  visco_elastic_functions.py
pre_processing/contact_model_development/: contact_forces.py  cyclic_stone_contact.py  force_plotter.py  scalur.py
pre_processing/viscoelastic/: Radii.py
simulations/asphalt_shear_box/: asphalt_shear_box.sim
simulations/battery_rve/: restart_electrode.sim  sim_1.sim
simulations/closed_die_compaction/: closed_die_1.sim  closed_die_electrode_compaction.sim  closed_die_electrode_filling.sim
simulations/cyclic_triaxial/: triaxial_1.sim
simulations/deformable_surfaces/: sim_1.sim
simulations/periodic_bc_test/: sim1.sim
simulations/porous_electrode/: sim_1.sim
simulations/proctor_test/: proctor.sim  proctor_8-16.sim  proctor_8-16_continued.sim  proctor_8-16_continued_weak.sim  proctor_8-16_weak.sim  proctor_fuller.sim  proctor_fuller_weak.sim  proctor_one_layer.sim  proctor_one_layer_weak.sim  proctor_test.sim
simulations/stone_compaction/: stone_compaction_13mm.sim  stone_compaction_8-16.sim  stone_compaction_8-16_weak.sim  stone_compaction_fuller.sim  stone_compaction_fuller_weak.sim
simulations/viscoelastic/: Cathode_mechanical_simulations.sim  viscoelastic_5_box.sim  viscoelastic_5_contact.sim  viscoelastic_8_16.sim
source/: a.out  amplitude.h  amplitude.tpp  bounding_box.h  bounding_box.tpp  bounding_box_projection.cpp  bounding_box_projection.h  bounding_box_projection.tpp  closed_die_compaction.cpp  collision_detector.h  collision_detector.tpp  collition_detector.tpp  contact.h  contact.tpp  contact_matrix.h  contact_matrix.tpp  contact_vector.h  contact_vector.tpp  cylinder.h  cylinder.tpp  edge.cpp  edge.h  elastic_ideal_plastic_material.h  engine.h  engine.tpp  file_reading_functions.cpp  file_reading_functions.h  filling_functions.cpp  filling_functions.h  fractureable_spherical_particle.h  fractureable_spherical_particle.tpp  gyratory_compaction.cpp  linear_contact_material.h  linear_stick_slip_model.cpp  linear_stick_slip_model.h  main.cpp  output.h  output.tpp  particle_base.h  point_surface.cpp  (+15 more)
src/: main.cpp
src/contact_models/: battery_particle_contact.cpp  battery_particle_contact.h  hertz_with_bonds.cpp  hertz_with_bonds.h  linear_stick_slip_model.cpp  linear_stick_slip_model.h  porous_electrode_contact.cpp  porous_electrode_contact.h  stone_material_contact.cpp  stone_material_contact.h  storakers_mesarovic_johnson.cpp  storakers_mesarovic_johnson.h  viscoelastic.cpp  viscoelastic.h
src/engine/: contact.h  contact.tpp  engine.h  engine.tpp  output.h  output.tpp  periodic_bc_handler.h  periodic_bc_handler.tpp  settings.h
src/materials/: ViscoelasticMaterial.h  elastic_bonded_material.cpp  elastic_bonded_material.h  elastic_ideal_plastic_material.cpp  elastic_ideal_plastic_material.h  electrode_material.cpp  electrode_material.h  material_base.cpp  material_base.h  porous_electrode_material.h  stone_material.h
src/particles/: fractureable_spherical_particle.h  fractureable_spherical_particle.tpp  particle_base.h  particle_base.tpp  spherical_particle.h  spherical_particle.tpp  spherical_particle_base.h  spherical_particle_base.tpp
src/simulations/: Cathode_mechanical_simulations.cpp  Electrode_compaction.cpp  Electrode_mechanical_test.cpp  asphalt_shear_box.cpp  asphalt_shear_box_bonded.cpp  cathode_mechanical_simulations.cpp  closed_die_compaction.cpp  contact_tester.cpp  cyclic_triaxial.cpp  cylinder_electrode_material.cpp  electrode_box.cpp  electrode_compaction.cpp  electrode_mechanical_test.cpp  gyratory_compaction.cpp  proctor_test.cpp  simulations.cpp  simulations.h  stone_compaction.cpp
src/surfaces/: circular_plate.h  circular_plate.tpp  cylinder.h  cylinder.tpp  deformable_point_surface.h  deformable_point_surface.tpp  point_surface.h  point_surface.tpp  surface_base.h  surface_base.tpp
src/utilities/: amplitude.cpp  amplitude.h  contact_matrix.h  contact_matrix.tpp  contact_vector.h  contact_vector.tpp  file_reading_functions.cpp  file_reading_functions.h  filling_functions.cpp  filling_functions.h  printing_functions.h  vec3.h
(+19 files in other folders)
